--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,16 +119,16 @@ jobs:
         if: inputs.dev == false
         run: git push --tags
 
-      # PUBLISH NPM PACKAGE
-      - name: Publish npm package
-        run: |
-          if [ ${{ inputs.dev }} == true ]; then
-            npm publish --tag=${{ inputs.jsTag }}
-          else
-            npm publish --access public
-          fi
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.PERSONAL_ACCESS_TOKEN}}
+      # # PUBLISH NPM PACKAGE
+      # - name: Publish npm package
+      #   run: |
+      #     if [ ${{ inputs.dev }} == true ]; then
+      #       npm publish --tag=${{ inputs.jsTag }}
+      #     else
+      #       npm publish --access public
+      #     fi
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.PERSONAL_ACCESS_TOKEN}}
 
       # CREATE RELEASE
       - name: Create Release
