--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-          GITHUB_TOKEN: ${{ secrets.OR_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
 
       # CHECKOUT PROJECT
