--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ permissions:
   id-token: write
   contents: write
   packages: write
+  pull-requests: write # Added permission to manage pull requests
 
 jobs:
   delete:
@@ -61,7 +62,6 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git checkout -b automated-branch
 
       # SETUP NODE
       - uses: actions/setup-node@v4.0.2
@@ -91,33 +91,11 @@ jobs:
         run: |
           npm ci
           npm run build
-          
-      # - name: Commit changes
-      #   run: |
-      #     git add .
-      #     git commit -m "Automated changes by GitHub Actions"
-  
-      - name: Push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push --set-upstream origin automated-branch
-  
-      - name: Create Pull Request
-        id: create_pr
-        uses: peter-evans/create-pull-request@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: automated-branch
-          title: "Automated Changes"
-          body: "This is an automated PR created by GitHub Actions"
-          base: main
-          draft: false
-          
+
       # PUSH TAGS IF IT IS A RELEASE
       - name: Push tag if release
         if: inputs.dev == false
-        run: git push --tags
+        run: git push && git push --tags
 
       # # PUBLISH NPM PACKAGE
       # - name: Publish npm package
@@ -128,13 +106,15 @@ jobs:
       #       npm publish --access public
       #     fi
       #   env:
-      #     NODE_AUTH_TOKEN: ${{secrets.PERSONAL_ACCESS_TOKEN}}
+      #     NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       # CREATE RELEASE
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          name: ${{env.TAG_NAME}}
-          tag_name: ${{env.TAG_NAME}}
+          name: ${{ env.TAG_NAME }}
+          tag_name: ${{ env.TAG_NAME }}
           generate_release_notes: true
           prerelease: ${{ inputs.dev }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Ensure this token is used here as well
