--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,7 @@ jobs:
           git fetch origin
           if git show-ref --verify --quiet refs/heads/${{ inputs.branch }}; then
             git checkout ${{ inputs.branch }}
+            git pull
           else
             git checkout -b ${{ inputs.branch }} origin/main
           fi
