--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,8 +124,9 @@ jobs:
           branch: ${{ inputs.branch }}
           title: "Automated Changes"
           body: "This is an automated PR created by GitHub Actions"
-          base: main
+          # base: main
           draft: false
+          # delete-branch: true
       # # PUBLISH NPM PACKAGE
       # - name: Publish npm package
       #   run: |
