--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,7 +143,7 @@ jobs:
         uses: octokit/request-action@v2.3.1
         with:
           route: PUT /repos/${{ github.repository }}/pulls/${{ steps.pr.outputs.data[0].number }}/merge
-          token: ${{ secrets.GITHUB_TOKEN }}
+          #token: ${{ secrets.GITHUB_TOKEN }}
           merge_method: squash
           
       # # PUBLISH NPM PACKAGE
