--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,7 +121,7 @@ jobs:
         id: create_pr
         uses: peter-evans/create-pull-request@v6.0.5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TAMAR_PAT }}
           branch: ${{ inputs.branch }}
           title: "Automated Changes"
           body: "This is an automated PR created by GitHub Actions"
@@ -143,7 +143,7 @@ jobs:
         uses: octokit/request-action@v2.3.1
         with:
           route: PUT /repos/${{ github.repository }}/pulls/${{ steps.pr.outputs.data[0].number }}/merge
-          #token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TAMAR_PAT }}
           merge_method: squash
           
       # # PUBLISH NPM PACKAGE
