--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,9 +141,11 @@ jobs:
 
       - name: Merge Pull Request
         uses: octokit/request-action@v2.3.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TAMAR_PAT }}
         with:
           route: PUT /repos/${{ github.repository }}/pulls/${{ steps.pr.outputs.data[0].number }}/merge
-          token: ${{ secrets.TAMAR_PAT }}
+          # token: ${{ secrets.TAMAR_PAT }}
           merge_method: squash
           
       # # PUBLISH NPM PACKAGE
