--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TAMAR_PAT }}
     steps:
 
       # CHECKOUT PROJECT
@@ -141,8 +141,8 @@ jobs:
 
       - name: Merge Pull Request
         uses: octokit/request-action@v2.3.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TAMAR_PAT }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.TAMAR_PAT }}
         with:
           route: PUT /repos/${{ github.repository }}/pulls/${{ steps.create_pr.outputs.pull-request-number }}/merge
           # token: ${{ secrets.TAMAR_PAT }}
