--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,7 @@ jobs:
       
       - name: Create Pull Request
         id: create_pr
+        if: inputs.dev == false
         uses: peter-evans/create-pull-request@v6.0.5
         with:
           token: ${{ secrets.TAMAR_PAT }}
@@ -134,12 +135,14 @@ jobs:
 #     steps:
       - name: Wait for PR to be created
         id: pr
+        if: inputs.dev == false
         uses: octokit/request-action@v2.3.1
         with:
           route: GET /repos/${{ github.repository }}/pulls?head=${{ github.repository_owner }}:${{ inputs.branch }}
           # token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Merge Pull Request
+        if: inputs.dev == false
         uses: octokit/request-action@v2.3.1
         # env:
         #   GITHUB_TOKEN: ${{ secrets.TAMAR_PAT }}
