--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ permissions:
   id-token: write
   contents: write
   packages: write
-  pull-requests: write 
+  # pull-requests: write 
 
 jobs:
   delete:
