--- a/package.json
+++ b/package.json
@@ -1,47 +1,65 @@
 {
-  "name": "@CheckmarxDev/ast-cli-javascript-wrapper",
-  "version": "0.0.101",
-  "description": "AST CLI Javascript wrapper",
-  "main": "dist/main/wrapper/CxWrapper.js",
-  "typings": "dist/main/wrapper/CxWrapper.d.ts",
-  "files": [
-    "dist/main/**/*",
-    "README.md"
-  ],
+  "name": "owasp-nodejs-goat",
+  "private": true,
+  "version": "1.3.0",
+  "description": "A tool to learn OWASP Top 10 for node.js developers",
+  "main": "server.js",
   "dependencies": {
-    "log4js": "^6.9.1"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.1",
+    "consolidate": "^0.14.1",
+    "csurf": "^1.8.3",
+    "dont-sniff-mimetype": "^1.0.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "forever": "^2.0.0",
+    "helmet": "^2.0.0",
+    "marked": "0.3.5",
+    "mongodb": "^2.1.18",
+    "needle": "2.2.4",
+    "node-esapi": "0.0.1",
+    "serve-favicon": "^2.3.0",
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3"
+  },
+  "comments": {
+    "//": "a9 insecure components"
   },
   "scripts": {
-    "build": "tsc",
-    "postbuild": "copyfiles -u 1 src/main/wrapper/resources/cx* dist/;copyfiles -u 1 src/tests/data/* dist/;",
-    "lint": "eslint . --ext .ts",
-    "lint-and-fix": "eslint . --ext .ts --fix",
-    "test": "copyfiles -u 1 src/tests/data/* dist/; tsc && jest"
+    "start": "node server.js",
+    "dev": "cross-env PORT=5000 nodemon",
+    "test:e2e": "cross-env NODE_ENV=test cypress open",
+    "test:ci": "cross-env NODE_ENV=test cypress run",
+    "test": "node node_modules/grunt-cli/bin/grunt test",
+    "db:seed": "cross-env NODE_ENV=test grunt db-reset",
+    "precommit": "grunt precommit",
+    "docker-mongo": "docker run -p 27017:27017 --name mongo  mongo:latest",
+    "start-infra": "docker-compose up",
+    "stop-infra": "docker-compose down",
+    "cy:verify": "cypress verify"
   },
-  "repository": "https://github.com/CheckmarxDev/ast-cli-javascript-wrapper.git",
-  "author": "Jay Nanduri",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CheckmarxDev/ast-cli-javascript-wrapper/issues"
-  },
-  "homepage": "https://github.com/CheckmarxDev/ast-cli-javascript-wrapper#readme",
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "copyfiles": "^2.4.1",
-    "eslint": "8.1.0",
-    "jest": "^26.6.3",
-    "jest-cli": "29.7.0",
-    "ts-jest": "^26.0.0",
-    "ts-mockito": "^2.6.1",
-    "typescript": "^4.9.5"
+    "async": "^2.0.0-rc.4",
+    "cross-env": "^7.0.2",
+    "cypress": "^3.3.1",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.2.0",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-env": "latest",
+    "grunt-if": "https://github.com/binarymist/grunt-if/tarball/master",
+    "grunt-jsbeautifier": "^0.2.12",
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-npm-install": "^0.3.0",
+    "grunt-retire": "^0.3.12",
+    "jshint": "2.12.0",
+    "mocha": "^2.4.5",
+    "nodemon": "^1.19.1",
+    "selenium-webdriver": "^2.53.2",
+    "should": "^8.3.1",
+    "zaproxy": "^0.2.0"
   },
-  "overrides": {
-    "bluebird": "3.7.2"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  }
+  "repository": "https://github.com/OWASP/NodejsGoat",
+  "license": "Apache 2.0"
 }
